--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,10 @@
   		<artifactId>slf4j-api</artifactId>
   		<version>1.7.5</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-core</artifactId>
+  		<version>5.1.0.Final</version>
+  	</dependency>
   </dependencies>
 </project>
