--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,10 @@
   		<artifactId>hibernate-core</artifactId>
   		<version>5.1.0.Final</version>
   	</dependency>
+  	<dependency>
+  		<groupId>ch.qos.logback</groupId>
+  		<artifactId>logback-classic</artifactId>
+  		<version>1.0.13</version>
+  	</dependency>
   </dependencies>
 </project>
